--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ h1{
 .mezoKattintott{
     border: 1px solid black;
     background-color: white;
+    width: 30px;
+    height: 30px;
 
 }
 .könnyű, .normál, .nehéz{
@@ -49,6 +51,11 @@ h1{
     padding-top: 5px;
     background-color: black;
     margin: auto;
+}
+p{
+    height: 1%;
+    width: 50%;
+
 }
 
 
